--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -28,7 +28,9 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>3.2.0</version>
         </dependency>
+
 
 
     </dependencies>
