--- a/service/pom.xml
+++ b/service/pom.xml
@@ -15,11 +15,13 @@
         <groupId>com.capella</groupId>
         <artifactId>base</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <scope>compile</scope>
     </dependency>
         <dependency>
             <groupId>com.capella</groupId>
             <artifactId>persistence</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <properties>
