--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.capella</groupId>
         <artifactId>erp</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>domain</artifactId>
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>com.capella</groupId>
             <artifactId>base</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${erp.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
