--- a/facade/pom.xml
+++ b/facade/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.capella</groupId>
         <artifactId>erp</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>facade</artifactId>
@@ -13,12 +13,12 @@
     <dependency>
         <groupId>com.capella</groupId>
         <artifactId>base</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${erp.version}</version>
     </dependency>
         <dependency>
             <groupId>com.capella</groupId>
             <artifactId>service</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${erp.version}</version>
         </dependency>
     </dependencies>
     <properties>
