--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,17 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
-
+	<packaging>pom</packaging>
 	<groupId>com.capella</groupId>
 	<artifactId>erp</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<version>1.0.0</version>
 	<name>Capella Package ERP Project</name>
 	<description>erp project</description>
 
+
 	<properties>
 		<java.version>21</java.version>
+		<erp.version>1.0.0</erp.version>
 	</properties>
 
 
