--- a/webapp/src/main/resources/webapp-local.properties
+++ b/webapp/src/main/resources/webapp-local.properties
@@ -1,4 +1,4 @@
 server.port=9090
-
+server.servlet.context-path=/webapp/api
 ui.cors.origin.urls = http://localhost:4200
 spring.jackson.default-property-inclusion = NON_NULL
